fix overflow-x

--- a/CSS/root.css
+++ b/CSS/root.css
@@ -117,6 +117,11 @@ body {
         overflow-x: hidden;
 }
 
+.mainseite {
+        overflow-x: hidden;
+
+}
+
 
 
 
